Add Composer testing scripts

--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,7 @@
         "psr-0": {"": "src"}
     },
     "scripts": {
+        "test": "phpunit --colors=always",
+        "test-coverage": "phpunit --colors=always --coverage-clover clover.xml"
     }
 }
